--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; background-color: rgb(210, 231, 255);}
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;}
+button {background-color: transparent; border: none;}
+button:hover {cursor: pointer;}
+p, span, h1, h2, h3{ color: black; }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
