--- a/src/app/primary-button/primary-button.component.css
+++ b/src/app/primary-button/primary-button.component.css
@@ -1,3 +1,8 @@
+:host{
+    width: 144px;
+    height: 40px;
+}
+
 #button {
     width: 144px;
     height: 40px;
@@ -5,9 +10,7 @@
     border-radius: 4px;
     border: #0093D0;
     align-items: center;
-    margin: 8px;
     font-weight: 500;
-
 }
 
 #button:hover {
