--- a/src/app/regular-secondary-btn/regular-secondary-btn.component.html
+++ b/src/app/regular-secondary-btn/regular-secondary-btn.component.html
@@ -1,6 +1,3 @@
-<button id="button"> 
-    <span id="button_text">
-        {{ buttontext }}
-    </span>  
+<button class="button" [disabled]="ability">
+    {{buttontext}}    
 </button>
-
